chore(videodetail): prevent layout shift by adjusting poster position

--- a/packages/ui-react/src/components/VideoDetails/VideoDetails.module.scss
+++ b/packages/ui-react/src/components/VideoDetails/VideoDetails.module.scss
@@ -141,7 +141,8 @@
 .poster {
   position: absolute;
   top: 0;
-  right: 0;
+  right: -15px;
+  // right: 0;
 
   z-index: -1;
 
@@ -172,6 +173,7 @@
 .posterFade {
   position: absolute;
   top: 0;
+  right: -15px;
   left: 0;
   z-index: -1;
   width: 100%;
