--- a/packages/ui-react/src/containers/Layout/Layout.module.scss
+++ b/packages/ui-react/src/containers/Layout/Layout.module.scss
@@ -2,6 +2,7 @@
 @use '@jwp/ott-ui-react/src/styles/theme';
 
 .layout {
+  position: relative;
   display: flex;
   flex-grow: 1;
   flex-direction: column;
